--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ngrok": "^5.0.0-beta.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
